tests/sources/invalid/generics/generic_call_constraint_violation.fire
// Semantic error: explicit type argument for a generic function call that
// violates the function's declared type constraint.

fn identity<T: int32 | int64>(value: T) -> T {
    return value;
}

fn generic_call_constraint_violation() -> void {
    x: int32 = identity<string>(5);  //~ ERROR FS-SEM-0010 @16
//~^ ERROR FS-SEM-0002 @5
}
